--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 8px, 60px;
 }
 
 .logo img{
@@ -185,7 +186,6 @@ a {
   height: 100%;
   width: auto;
   object-fit: contain;
-  gap: var(--space-sm);
 }
 
 .nav-menu {
