--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@
    RESET & BASE STYLES
    ============================================================================ */
 * {
-    margin: 0 5%;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
@@ -88,6 +88,7 @@ body {
     line-height: 1.6;
     color: var(--dark-gray);
     background-color: var(--white);
+    margin: 0 5%;
 }
 
 img {
