--- a/styles.css
+++ b/styles.css
@@ -604,7 +604,7 @@ a {
     }
 
     .nav-menu {
-        gap: var(--space-sm);
+        gap: var(--space-md);
     }
 
     .nav-link {
@@ -614,7 +614,6 @@ a {
     .hero-content {
         max-width: 100%;
         padding-right: 0;
-        min-height: 50vh;
     }
     
     .hero-container {
@@ -656,6 +655,15 @@ a {
     }
 
 
+}
+
+/* Just Header (0-700px) */
+@media (max-width: 767px) {
+    .header-container {
+        flex-direction: column;
+        gap: var(--space-lg);
+        padding: var(--space-lg);
+    }
 }
 
 /* SMALL MOBILE (0px - 479px) */
