--- a/styles.css
+++ b/styles.css
@@ -663,10 +663,36 @@ a {
 
 }
 
+/* Just Header and footer (0-700px) */
+@media (max-width: 679px) {
+    .header-container {
+        flex-direction: column;
+        gap: var(--space-xs);
+        padding: 0;
+    }
 
+    .footer {
+        padding: var(--space-xl) 0;
+    }
+    .footer-content {
+        flex-direction: column;
+        align-items: center;
+        gap: var(--space-lg);
+        padding: 0;
+    }
+
+    .footer-description {
+        text-align: center;
+        font-size: var(--font-size-xl);
+    }
+
+    .team-member {
+        margin-top: var(--space-lg);
+    }
+}
 
 /* SMALL MOBILE (0px - 479px) */
-@media (max-width: 700px) {
+@media (max-width: 500px) {
     :root {
         --font-size-5xl: 2.25rem;
         --font-size-4xl: 2rem;
