--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,7 @@ a {
     transition: color var(--transition-fast);
     font-weight: 600;
 }
+
 .ext-link:hover {
     color: var(--hover-primary);
 }
@@ -259,7 +260,8 @@ a {
     padding: var(--space-xl) 0;
     position: relative;
     overflow: hidden;
-    min-height: 40vh; /* Ensure minimum height */
+    min-height: 40vh;
+    /* Ensure minimum height */
 }
 
 .hero::before {
@@ -285,13 +287,15 @@ a {
 
 .hero-content {
     max-width: 75%;
-    padding-right: var(--space-xl); /* Add some breathing room */
+    padding-right: var(--space-xl);
+    /* Add some breathing room */
     z-index: 2;
 }
 
 .logo-hero {
     height: auto;
-    width: 200px; /* Base width for desktop */
+    width: 200px;
+    /* Base width for desktop */
     max-width: 100%;
     margin-bottom: var(--space-sm);
 }
@@ -518,13 +522,13 @@ a {
 .research-CVE td:first-child {
     font-weight: 600;
     color: var(--dark-gray);
-	white-space: nowrap;
-	width: 1%;
+    white-space: nowrap;
+    width: 1%;
 }
 
 .research-CVE td:last-child {
-	white-space: nowrap;
-	width: 1%;
+    white-space: nowrap;
+    width: 1%;
 }
 
 
@@ -614,7 +618,7 @@ a {
 }
 
 .footer-content {
-    max-width:100%;
+    max-width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -709,7 +713,7 @@ a {
         max-width: 100%;
         padding-right: 0;
     }
-    
+
     .hero-container {
         min-height: 40vh;
     }
@@ -774,7 +778,7 @@ a {
     .research-CVE .btn-ghost {
         padding: var(--space-xs) var(--space-sm);
     }
-    
+
 }
 
 /* Just Header and footer (501px - 700px) */
@@ -788,6 +792,7 @@ a {
     .footer {
         padding: var(--space-xl) 0;
     }
+
     .footer-content {
         flex-direction: column;
         align-items: center;
